--- a/conf/app.ini
+++ b/conf/app.ini
@@ -6,7 +6,7 @@
 BRAND_NAME = Gogs
 ; The system user who should be running the applications. It has no effect on Windows,
 ; otherwise, it should match the value of $USER environment variable.
-RUN_USER = git
+RUN_USER = lapaz
 ; The running mode of the application, can be either "dev", "prod" or "test".
 RUN_MODE = dev
 
